<resources>
    <string name="app_name">Ampulheta Digital</string>
    <string name="iniciar">INICIAR</string>
    <string name="pause">PAUSE</string>
    <string name="para">PARA</string>
    <string name="reniciar">RENICIAR</string>
    <string name="relogio_zerado">00:00:00</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_tarefas">Tarefas</string>
    <string name="textview_horas">Horas</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_definir">Definir</string>
    <string name="textview_minutos">Minutos</string>
    <string name="textview_segundos">Segundos</string>
    <string name="textview_defina_tempo">CLIQUE NO RELÓGIO PARA DEFINIR O TEMPO</string>
    <string name="textview_definicao_tempo_padrao">DEFINIÇÃO DE TEMPO PADRÃO</string>
    <string name="textview_minutos_padrao">MINUTOS</string>
    <string name="textview_segundos_padrao">SEGUNDOS</string>
    <string name="textview_horas_padrao">HORAS</string>
    <string name="button_salvar">Salvar</string>
    <string name="textview_tarefa">TAREFA:</string>
    <string name="textview_lista_tarefas">LISTA DE TAREFAS</string>
    <string name="button_atualizar">Atualizar</string>
    <string name="button_excluir">Excluir</string>
    <string name="button_nova_tarefa">Nova</string>
    <string name="textview_alerta_sonoro">ALERTAS SONOROS</string>
    <string name="textview_tempo_em_pausa">TEMPO EM PAUSA:</string>
    <string name="textview_exibir_tempo_em_pausa">Exibir tempo em pausa</string>
    <string name="button_voltar">Voltar</string>

</resources>
