<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textview_lista_tarefas"
        android:id="@+id/textViewDefinicaoTempoPadrao"
        android:textColor="#333"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listViewTarefas"
        android:layout_below="@id/textViewDefinicaoTempoPadrao"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/linearLayoutBotoesTarefas" />

    <LinearLayout
        android:id="@+id/linearLayoutBotoesTarefas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_voltar"
                android:id="@+id/buttonVoltarTarefa"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_nova_tarefa"
                android:id="@+id/buttonNovaTarefa"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
